--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="page-header" id="banner">
             <h1>One month of code!</h1>
-            <p>Let's make a month of code challenge! (details after the break)</p>
+            <p>Let's make a month of code challenge!</p>
         </div>
 
         <div class="row">
@@ -83,7 +83,7 @@
         </div>
         <footer style="margin: 5em 0;">
             <div class="row">
-                <p class="text-center">Matthieu Bilbille <span class="glyphicon glyphicon-heart" style="margin: 0 11px 0 20px;"></span> <a href="https://github.com/mbilbille" class="btn btn-warning btn-xs" target="_blank">github.com/mbilbille</a></p>
+                <p class="text-center">Matthieu Bilbille <span style="margin: 0 11px 0 20px;">♥</span> <a href="https://github.com/mbilbille" class="btn btn-warning btn-xs" target="_blank">github.com/mbilbille</a></p>
             </div>
         </footer>
     </div>
