Add Google Analytics tracker

--- a/01/index.html
+++ b/01/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>MOC 01 - Hello World</title>
+    <script src="../assets/ga.js"></script>
     <style type="text/css">
         body {
             color: #000;
