--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <h4>Progress</h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-info" style="width: 3.22%"></div>
+                <div class="progress-bar progress-bar-info" style="width: 6.45%"></div>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
             <h4>Week 1</h4>
             <div class="btn-group">
                 <a href="01/index.html" role="button" class="btn btn-info">Hello World</a>
-                <a href="#" role="button" class="btn btn-default disabled">Border</a>
+                <a href="02/index.html" role="button" class="btn btn-info">Border</a>
                 <a href="#" role="button" class="btn btn-default disabled">Binary</a>
                 <a href="#" role="button" class="btn btn-default disabled">Error</a>
                 <a href="#" role="button" class="btn btn-default disabled">Bounce</a>
