--- a/02/index.html
+++ b/02/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>MOC 02 - Border</title>
+  <script src="../assets/ga.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
   <style type="text/css">
     #moc02 {
