Use font awesome

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 
     <title>One month of code</title>
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/lumen/bootstrap.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <script src="assets/ga.js"></script>
+    <style type="text/css">
+        .fa-heart {
+            margin: 0 11px 0 20px;
+        }
+        .fa-heart:hover {
+            color: #EC7063;
+            transition: color 0.2s;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -83,7 +93,7 @@
         </div>
         <footer style="margin: 5em 0;">
             <div class="row">
-                <p class="text-center">Matthieu Bilbille <span style="margin: 0 11px 0 20px;">♥</span> <a href="https://github.com/mbilbille" class="btn btn-warning btn-xs" target="_blank">github.com/mbilbille</a></p>
+                <p class="text-center">Matthieu Bilbille <i class="fa fa-heart"></i> <a href="https://github.com/mbilbille" target="_blank">github.com/mbilbille</a></p>
             </div>
         </footer>
     </div>
