--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="assets/ga.js"></script>
     <style type="text/css">
         .fa-heart {
-            margin: 0 11px 0 20px;
+            margin: 0 11px;
         }
         .fa-heart:hover {
             color: #EC7063;
