--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row">
             <h4>Progress</h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-info" style="width: 6.45%"></div>
+                <div class="progress-bar progress-bar-info" style="width: 9.67%"></div>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="btn-group">
                 <a href="01/index.html" role="button" class="btn btn-info">Hello World</a>
                 <a href="02/index.html" role="button" class="btn btn-info">Border</a>
-                <a href="#" role="button" class="btn btn-default disabled">Binary</a>
+                <a href="03/index.html" role="button" class="btn btn-info">Binary</a>
                 <a href="#" role="button" class="btn btn-default disabled">Error</a>
                 <a href="#" role="button" class="btn btn-default disabled">Bounce</a>
                 <a href="#" role="button" class="btn btn-default disabled">Time</a>
