Add sample page for moc 0

--- a/03/index.html
+++ b/03/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>MOC 03 - Binary</title>
-  <!--<script src="../assets/ga.js"></script>-->
+  <script src="../assets/ga.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <h1>0 ... 1023</h1>
