--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>One month of code</title>
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/lumen/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <script src="assets/ga.js"></script>
     <style type="text/css">
         .fa-heart {
@@ -45,7 +45,7 @@
                 <a href="01/index.html" role="button" class="btn btn-info">Hello World</a>
                 <a href="02/index.html" role="button" class="btn btn-info">Border</a>
                 <a href="03/index.html" role="button" class="btn btn-info">Binary</a>
-                <a href="#" role="button" class="btn btn-default disabled">Error</a>
+                <a href="04/index.html" role="button" class="btn btn-info">Error</a>
                 <a href="#" role="button" class="btn btn-default disabled">Bounce</a>
                 <a href="#" role="button" class="btn btn-default disabled">Time</a>
                 <a href="#" role="button" class="btn btn-default disabled">Input</a>
