--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="02/index.html" role="button" class="btn btn-info">Border</a>
                 <a href="03/index.html" role="button" class="btn btn-info">Binary</a>
                 <a href="04/index.html" role="button" class="btn btn-info">Error</a>
-                <a href="#" role="button" class="btn btn-default disabled">Bounce</a>
+                <a href="05/index.html" role="button" class="btn btn-info">Bounce</a>
                 <a href="#" role="button" class="btn btn-default disabled">Time</a>
                 <a href="#" role="button" class="btn btn-default disabled">Input</a>
             </div>
