--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="03/index.html" role="button" class="btn btn-info">Binary</a>
                 <a href="04/index.html" role="button" class="btn btn-info">Error</a>
                 <a href="05/index.html" role="button" class="btn btn-info">Bounce</a>
-                <a href="#" role="button" class="btn btn-default disabled">Time</a>
+                <a href="06/index.html" role="button" class="btn btn-info">Time</a>
                 <a href="#" role="button" class="btn btn-default disabled">Input</a>
             </div>
             <h4>Week 2</h4>
