--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h4>Progress</h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-info" style="width: 19.35%"></div>
+                <div class="progress-bar progress-bar-success" style="width: 3.23%"></div>
             </div>
         </div>
 
@@ -57,7 +58,7 @@
                 <a href="#" role="button" class="btn btn-default disabled">Jump</a>
                 <a href="#" role="button" class="btn btn-default disabled">Switch</a>
                 <a href="#" role="button" class="btn btn-default disabled">ASCII</a>
-                <a href="#" role="button" class="btn btn-default disabled">Pixel</a>
+                <a href="12/index.html" role="button" class="btn btn-success">Pixel</a>
                 <a href="#" role="button" class="btn btn-default disabled">Sound</a>
                 <a href="#" role="button" class="btn btn-default disabled">Loop</a>
             </div>
