--- a/10/index.html
+++ b/10/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>MOC 10 - Switch</title>
-    <!--<script src="../assets/ga.js"></script>-->
+    <script src="../assets/ga.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
