Update landing page MOC10

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h4>Progress</h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-info" style="width: 19.35%"></div>
-                <div class="progress-bar progress-bar-success" style="width: 6.46%"></div>
+                <div class="progress-bar progress-bar-success" style="width: 9.68%"></div>
             </div>
         </div>
 
@@ -56,7 +56,7 @@
                 <!-- success -->
                 <a href="#" role="button" class="btn btn-default disabled">Mathematics</a>
                 <a href="09/index.html" role="button" class="btn btn-success">Jump</a>
-                <a href="#" role="button" class="btn btn-default disabled">Switch</a>
+                <a href="#" role="button" class="btn btn-success">Switch</a>
                 <a href="#" role="button" class="btn btn-default disabled">ASCII</a>
                 <a href="12/index.html" role="button" class="btn btn-success">Pixel</a>
                 <a href="#" role="button" class="btn btn-default disabled">Sound</a>
