Fix link to MOC10

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- success -->
                 <a href="#" role="button" class="btn btn-default disabled">Mathematics</a>
                 <a href="09/index.html" role="button" class="btn btn-success">Jump</a>
-                <a href="#" role="button" class="btn btn-success">Switch</a>
+                <a href="10/index.html" role="button" class="btn btn-success">Switch</a>
                 <a href="#" role="button" class="btn btn-default disabled">ASCII</a>
                 <a href="12/index.html" role="button" class="btn btn-success">Pixel</a>
                 <a href="#" role="button" class="btn btn-default disabled">Sound</a>
