--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="progress">
                 <div class="progress-bar progress-bar-info" style="width: 19.35%"></div>
                 <div class="progress-bar progress-bar-success" style="width: 9.68%"></div>
+                <div class="progress-bar progress-bar-warning" style="width: 3.23%"></div>
             </div>
         </div>
 
@@ -65,7 +66,7 @@
             <h4>Week 3</h4>
             <div class="btn-group">
                 <!-- warning -->
-                <a href="#" role="button" class="btn btn-default disabled">Yellow</a>
+                <a href="15/index.html" role="button" class="btn btn-default disabled">Yellow</a>
                 <a href="#" role="button" class="btn btn-default disabled">Square</a>
                 <a href="#" role="button" class="btn btn-default disabled">Random</a>
                 <a href="#" role="button" class="btn btn-default disabled">Search</a>
