--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h4>Week 3</h4>
             <div class="btn-group">
                 <!-- warning -->
-                <a href="15/index.html" role="button" class="btn btn-default disabled">Yellow</a>
+                <a href="15/index.html" role="button" class="btn btn-warning">Yellow</a>
                 <a href="#" role="button" class="btn btn-default disabled">Square</a>
                 <a href="#" role="button" class="btn btn-default disabled">Random</a>
                 <a href="#" role="button" class="btn btn-default disabled">Search</a>
