--- a/15/index.html
+++ b/15/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MOC 15 - Yello</title>
+  <title>MOC 15 - Yellow</title>
   <script src="../assets/ga.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background:rgb(255,255,0);">
-  <h1 id="title">YELLOW</h1>
+  <h1 id="title">★ YELLOW ★</h1>
   <div><input id="yellowize" type="range" min="0" max="100" /></div>
   <script type="text/javascript">
     var range = document.getElementById("yellowize");
